# splot

./: .gitignore  CMakeLists.txt  CPackConfig.cmake.in  ChangeLog  Makefile.am  README.md  autogen.sh  config.h.cmake.in  configure.ac  splotConfig.cmake.in  splotConfigVersion.cmake.in
data/: Makefile.am
data/fnt/: Makefile.am
m4/: Makefile.am
misc/: Makefile.am  splot.desktop  splot.nsi  splot.spec
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.in.template
prj/: Makefile.am
prj/msvc/: Makefile.am  VS_ProjectPropertySheet_FTGL.props  VS_ProjectPropertySheet_FTGLd.props  VS_ProjectPropertySheet_OpenGL.props  splot.sln  splot.vcxproj  splot.vcxproj.filters
src/: CMakeLists.txt  Makefile.am  OpenGL_common.cpp  OpenGL_common.h  audio.cpp  audio.h  audio_SDLmixer.cpp  audio_SDLmixer.h  background.cpp  background.h  background_metal.cpp  background_metal.h  background_metal_segment.cpp  background_metal_segment.h  background_sea.cpp  background_sea.h  background_sea_segment.cpp  background_sea_segment.h  background_segment.cpp  background_segment.h  common.cpp  common.h  configuration.cpp  configuration.h  defines.h  enemies.cpp  enemies.h  enemy_aircraft.cpp  enemy_aircraft.h  enemy_bullets.cpp  enemy_bullets.h  enemy_fleet.cpp  enemy_fleet.h  explosion.cpp  explosion.h  game_element.cpp  game_element.h  highscore.cpp  highscore.h  image.cpp  (+31 more)
vs/: VS_ProjectPropertySheet_SDL.props  splot.vcxproj  splot.vcxproj.filters
